# Josh-Maggard

./: .replit  cypress.config.ts  jest.config.ts  package-lock.json  package.json  pyproject.toml  replit.nix
client/src/components/: AnimationControls.tsx  Canvas.tsx  ObjectLibrary.tsx  PromptInput.tsx
client/src/lib/: animations.ts  api.ts
client/src/pages/: Home.test.tsx  Home.tsx
cypress/support/: e2e.ts
db/: index.ts  schema.ts
server/: index.ts  routes.ts
server/ai_service/: main.py  procedural_generator.py
