[project]
name = "repl-nix-ai-blueboard-edu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.6",
    "numpy>=2.2.0",
    "pydantic>=2.10.3",
    "requests>=2.32.3",
    "scipy",
    "torch>=1.14.1",
    "transformers>=4.47.0",
    "uvicorn>=0.32.1",
]
